# kalibrate

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  TODO  config.h.in
doc/: CMakeLists.txt  Doxyfile  kalibrate.1
kalibrate/: CMakeLists.txt  gui.cc  gui.h  imagelist.cc  imagelist.h  imageviewer.cc  imageviewer.h  kalib_plugin.h  kalibrate.cc  kalibrate.desktop  kalibrate.xml  linear.h  opencv.cc  opencv.h
